plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'me.ditto'
version = '0.0.1-SNAPSHOT'
description = 'gorong-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // Spring Boot Web & Security
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // Database (PostgreSQL & Spring Data JPA)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.postgresql:postgresql'

    implementation 'org.hibernate.orm:hibernate-spatial'
    // Firebase Admin SDK (서버용 Firebase 라이브러리)
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    implementation 'org.locationtech.jts:jts-core:1.19.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.json:json:20240303'
    // jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    
    implementation 'software.amazon.awssdk:s3:2.25.67'
}

tasks.named('test') {
    useJUnitPlatform()
}
